<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultra_light_gray"
    tools:context=".view.activity.RecoverPasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_buttons" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutCallButton"
        android:layout_below="@+id/toolbarLayout">

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitleCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/constraint_bottom"
                android:text="@string/help_center"
                android:textAlignment="center"
                android:textAppearance="@style/TitleBlueSP1.Theme" />

            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/constraint_bottom"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textAppearance="@style/TitleLightBlueSP2.Theme" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/constraint_sp1"
                android:layout_marginRight="@dimen/constraint_sp1"
                android:text="@string/lorem_ipsum"
                android:textAlignment="center"
                android:textAppearance="@style/SubtitleBlue.Theme" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutCallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ultra_light_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/standard_constraint">

        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:onClick="onClickCall"
            android:text="@string/register"
            android:theme="@style/LigthBlueButton.Theme"
            app:srcCompat="@drawable/icon_call"
            android:contentDescription="@null" />

    </LinearLayout>
</RelativeLayout>