<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DespatchAnfDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_buttons" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:background="@color/ultra_light_gray"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_constraint"
            android:layout_marginEnd="@dimen/standard_constraint"
            android:layout_marginStart="@dimen/standard_constraint"
            android:layout_marginTop="@dimen/half_constraint"
            android:text="@string/subtitle_password_forgot"
            android:textAppearance="@style/SubtitleBlue.Theme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/light_gray"
            android:orientation="horizontal"></View>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutBottom"
        android:layout_below="@+id/linearLayout3">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_constraint"
            android:padding="@dimen/half_constraint">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textAppearance="@style/DescriptionTitleGray.Theme" />

                <EditText
                    android:id="@+id/txtUser"
                    style="@style/TitleBlue.Theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/password_description"
                    android:textAppearance="@style/TextBlue.Theme" />

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ultra_light_gray"
        android:orientation="vertical"
        android:padding="@dimen/standard_constraint">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:theme="@style/GrayButton.Theme" />

    </LinearLayout>
</RelativeLayout>
