<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DespatchSaleActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_buttons" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:background="@color/ultra_light_gray"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_constraint"
            android:layout_marginEnd="@dimen/standard_constraint"
            android:layout_marginStart="@dimen/standard_constraint"
            android:layout_marginTop="@dimen/half_constraint"
            android:text="@string/input_data"
            android:textAppearance="@style/SubtitleBlue.Theme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/light_gray"
            android:orientation="horizontal">

        </View>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutBottom"
        android:layout_below="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_constraint"
                app:cardCornerRadius="@dimen/button_radius"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_constraint"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:onClick="onClickDespatchType" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/despatch_from"
                                android:textAppearance="@style/DescriptionTitleGray.Theme" />

                            <EditText
                                android:id="@+id/txtDespatch"
                                style="@style/TitleBlue.Theme"
                                android:imeOptions="actionSend"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="-5dp"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:ems="10"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:hint="@null"
                                android:inputType="numberDecimal"
                                android:text="@string/select" />
                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/to_enter"
                        android:textAppearance="@style/DescriptionTitleGray.Theme" />

                    <EditText
                        android:id="@+id/txtNumber"
                        style="@style/TitleBlue.Theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-5dp"
                        android:ems="10"
                        android:maxLines="1"
                        android:imeOptions="actionSend"
                        tools:text="10107891116" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ultra_light_gray"
        android:orientation="vertical"
        android:padding="@dimen/standard_constraint">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickEnter"
            android:text="@string/enter"
            android:theme="@style/BlueButton.Theme" />
    </LinearLayout>
</RelativeLayout>
