<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultra_light_gray"
    tools:context=".view.activity.OptionMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_buttons" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_elija_opcion"
        android:layout_below="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_constraint"
        android:layout_marginEnd="@dimen/standard_constraint"
        android:layout_marginStart="@dimen/standard_constraint"
        android:layout_marginTop="@dimen/half_constraint"
        android:text="@string/select_option"
        android:textAppearance="@style/SubtitleBlue.Theme" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom_buttons"
        android:layout_below="@+id/tv_elija_opcion">



        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_constraint"
                android:gravity="center"
                android:padding="4dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/frameLayoutSale"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:background="@drawable/border_stroke"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/qrcode_scan"/>

                    <TextView
                        android:id="@+id/tv_despacho_ventas"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/despatch_qr"
                        android:textAppearance="@style/TitleGray.Theme"
                        android:textStyle="bold" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/frameLayoutANF"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/border_stroke"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/file_document"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/despatch_detail"
                        android:gravity="center"
                        android:id="@+id/tv_despacho_anf"
                        android:textAppearance="@style/TitleGray.Theme"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>
